[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntex = { version = "0.7", features = ["tokio"] }
winapi = {version = "0.3", features = ["wincon", "winuser"]}
sqlite = "0.31.1"
json = "0.12.4"
serde = "1.0.188"
serde_json = "1.0.105"
chrono = "0.4.31"
google-calendar = "0.7.0"
home = "0.5.5"


